--- a/达人榜/rule.html
+++ b/达人榜/rule.html
@@ -21,7 +21,7 @@
             function b() {
                 a.rem = f.getBoundingClientRect().width / 16, f.style.fontSize = a.rem + "px"
             }
-            var c, d = a.navigator.appVersion.mat   ch(/iphone/gi) ? a.devicePixelRatio : 1,
+            var c, d = a.navigator.appVersion.match(/iphone/gi) ? a.devicePixelRatio : 1,
                     e = 1 / d,
                     f = document.documentElement,
                     g = document.createElement("meta");
@@ -40,7 +40,7 @@
 </head>
 <body>
 <section class="content">
-    <section class="k_skin_box k_skin_3">
+    <section class="k_skin_box k_skin_4">
         <div class="k_skin"></div>
         <div class="k_banner"></div>
     </section>
@@ -48,13 +48,13 @@
         <div class="m_box">
             <dl class="r_join">
                 <dt>如何参与</dt>
-                <dl>点击【报名】按钮，即可开始参与活动；</dl>
-                <dl>通过以下的达人攻略，努力增加自己的达人值吧~</dl>
+                <dd>点击<span>【报名】</span>按钮，即可开始参与活动；</dd>
+                <dd>通过以下的达人攻略，努力增加自己的达人值吧~</dd>
             </dl>
             <dl class="r_attestation">
                 <dt>饭盒认证</dt>
-                <dl>游戏圈达人榜达人分值也能获取盒饭认证积分咯~</dl>
-                <dl>每周获得40达人分值，可相应获得盒饭认证*积分（每周）</dl>
+                <dd>游戏圈达人榜达人分值也能获取盒饭认证积分咯~</dd>
+                <dd>每周获得<span>40</span>达人分值，可相应获得盒饭认证*积分（每周）</dd>
             </dl>
             <div class="r_table">
                 <h3>达人分值</h3>
@@ -66,14 +66,60 @@
                         <th>上线次数</th>
                     </tr>
                     <tr>
-                        <td>1</td>
+                        <td style="padding-top:0.15rem;">1</td>
                         <td>推荐上首页</td>
                         <td>10</td>
                         <td>1次/天</td>
                     </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>推荐上订阅圈子页</td>
+                        <td>7</td>
+                        <td>1次/天</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>设置精华</td>
+                        <td>6</td>
+                        <td>1次/天</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>推荐给小编被采纳</td>
+                        <td>2</td>
+                        <td>2次/天</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>帖子被点赞</td>
+                        <td>每30赞/1分</td>
+                        <td>120赞/活动期间</td>
+                    </tr>
+                    <tr>
+                        <td>6</td>
+                        <td>发帖（兴趣圈）</td>
+                        <td>1</td>
+                        <td>2次/天</td>
+                    </tr>
+                    <tr>
+                        <td>7</td>
+                        <td>发帖（兴趣圈）</td>
+                        <td>2</td>
+                        <td>2次/天</td>
+                    </tr>
+                    <tr>
+                        <td>8</td>
+                        <td>帖子被分享</td>
+                        <td>1</td>
+                        <td>2次/天</td>
+                    </tr>
                 </table>
             </div>
         </div>
+        <div class="r_btnbox">
+            <a href="#"></a>
+        </div>
+
     </section>
 </section>
 <footer>
