--- a/天天好阅读活动改版/index.html
+++ b/天天好阅读活动改版/index.html
@@ -33,47 +33,270 @@
 <section id="content">
     <section class="i_main">
         <div class="i_tab">
-            <ul>
-                <li class="active new">
-                    <i></i>
+            <ul class="clearfix">
+                <li class="active">
+                    <div>
+                        <i class="new"></i>
+                    </div>
                     <p>最新</p>
                 </li>
-                <li class="amuse">
-                    <i></i>
+                <li>
+                    <div>
+                        <i class="amuse"></i>
+                    </div>
                     <p>奇葩搞笑</p>
                 </li>
-                <li class="test">
-                    <i></i>
+                <li>
+                    <div>
+                        <i class="test"></i>
+                    </div>
                     <p>星座测试</p>
                 </li>
-                <li class="gout">
-                    <i></i>
+                <li>
+                    <div>
+                        <i class="gout"></i>
+                    </div>
                     <p>趣味科普</p>
                 </li>
-                <li class="horse">
-                    <i></i>
+                <li>
+                    <div>
+                        <i class="horse"></i>
+                    </div>
                     <p>天马行空</p>
                 </li>
             </ul>
         </div>
         <div class="i_con">
             <ul class="i_nav">
-                <li><img src="images/nav_1.png" alt=""></li>
-                <li><i> </i><img src="images/nav_2.png" alt=""></li>
-                <li><i> </i><img src="images/nav_3.png" alt=""></li>
-                <li><i> </i><img src="images/nav_4.png" alt=""></li>
-                <li><i> </i><img src="images/nav_5.png" alt=""></li>
+                <li class="title"><a href="#"><img src="images/nav_1.png" alt=""></a></li>
+                <li><i> </i><a href="#"><img src="images/nav_2.png" alt=""></a></li>
+                <li><i> </i><a href="#"><img src="images/nav_3.png" alt=""></a></li>
+                <li><i> </i><a href="#"><img src="images/nav_4.png" alt=""></a></li>
+                <li><i> </i><a href="#"><img src="images/nav_5.png" alt=""></a></li>
             </ul>
-            <p class="i_tips">
-                <span>今天已有 <strong>12345678</strong> 人参加</span>
-                <span>您已赚 <i>235</i>盒币</span><i class="update"></i>
+            <p class="i_tips clearfix ">
+                <span class="fl">今天已有 <strong>12345678</strong> 人参加</span>
+                <span class="fr">您已赚 <i>235</i>盒币<a></a></span>
             </p>
-            <ul class="i_list">
+            <div class="i_listBox" id="J_listBox">
+                <ul class="i_list">
+                    <li class="clearfix">
+                        <div class="pic_box fl">
+                            <i class="hot"></i>
+                            <img src="images/2.jpg  " alt="">
+                        </div>
+                        <div class="text fr">
+                            <h3>
+                                <a href="#">给我一个镜头，还你一套表情包！</a>
+                            </h3>
+                            <div class="info clearfix">
+                                <div class="fl read">
+                                    <i></i><span>123456</span>
+                                </div>
+                                <div class="fr hebi">
+                                    <i>剩余盒币：</i><span>12345<i>&nbsp;&nbsp;/&nbsp;&nbsp;23456</i></span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="clearfix">
+                        <div class="pic_box fl">
+                            <i class="hot"></i>
+                            <img src="images/3.jpg  " alt="">
+                        </div>
+                        <div class="text fr">
+                            <h3>
+                                <a href="#">奇葩的请假理由！艾玛！吓坏本宝
+                                    宝了！求扩散！</a>
+                            </h3>
+                            <div class="info clearfix">
+                                <div class="fl read">
+                                    <i></i><span>123456</span>
+                                </div>
+                                <div class="fr hebi">
+                                    <i>剩余盒币：</i><span>12345<i>&nbsp;&nbsp;/&nbsp;&nbsp;23456</i></span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="clearfix">
+                        <div class="pic_box fl">
+                            <i class="null"></i>
+                            <img src="images/1.jpg  " alt="">
+                        </div>
+                        <div class="text fr">
+                            <h3>
+                                <a href="#">你是不是QQ上的土逼？！</a>
+                            </h3>
+                            <div class="info clearfix">
+                                <div class="fl read">
+                                    <i></i><span>123456</span>
+                                </div>
+                                <div class="fr hebi">
+                                    <i>剩余盒币：</i><span>12345<i>&nbsp;&nbsp;/&nbsp;&nbsp;23456</i></span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="clearfix">
+                        <div class="pic_box fl">
+                            <i class="hot"></i>
+                            <img src="images/1.jpg  " alt="">
+                        </div>
+                        <div class="text fr">
+                            <h3>
+                                <a href="#">16个会让老妈完全爆炸的日常对话!
+                                    都进来看看吧！</a>
+                            </h3>
+                            <div class="info clearfix">
+                                <div class="fl read">
+                                    <i></i><span>123456</span>
+                                </div>
+                                <div class="fr hebi">
+                                    <i>剩余盒币：</i><span>12345<i>&nbsp;&nbsp;/&nbsp;&nbsp;23456</i></span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="clearfix">
+                        <div class="pic_box fl">
+                            <i class="hot"></i>
+                            <img src="images/1.jpg  " alt="">
+                        </div>
+                        <div class="text fr">
+                            <h3>
+                                <a href="#">16个会让老妈完全爆炸的日常对话!
+                                    都进来看看吧！</a>
+                            </h3>
+                            <div class="info clearfix">
+                                <div class="fl read">
+                                    <i></i><span>123456</span>
+                                </div>
+                                <div class="fr hebi">
+                                    <i>剩余盒币：</i><span>12345<i>&nbsp;&nbsp;/&nbsp;&nbsp;23456</i></span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="clearfix">
+                        <div class="pic_box fl">
+                            <i class="hot"></i>
+                            <img src="images/1.jpg  " alt="">
+                        </div>
+                        <div class="text fr">
+                            <h3>
+                                <a href="#">16个会让老妈完全爆炸的日常对话!
+                                    都进来看看吧！</a>
+                            </h3>
+                            <div class="info clearfix">
+                                <div class="fl read">
+                                    <i></i><span>123456</span>
+                                </div>
+                                <div class="fr hebi">
+                                    <i>剩余盒币：</i><span>12345<i>&nbsp;&nbsp;/&nbsp;&nbsp;23456</i></span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="clearfix">
+                        <div class="pic_box fl">
+                            <i class="hot"></i>
+                            <img src="images/1.jpg  " alt="">
+                        </div>
+                        <div class="text fr">
+                            <h3>
+                                <a href="#">16个会让老妈完全爆炸的日常对话!
+                                    都进来看看吧！</a>
+                            </h3>
+                            <div class="info clearfix">
+                                <div class="fl read">
+                                    <i></i><span>123456</span>
+                                </div>
+                                <div class="fr hebi">
+                                    <i>剩余盒币：</i><span>12345<i>&nbsp;&nbsp;/&nbsp;&nbsp;23456</i></span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="clearfix">
+                        <div class="pic_box fl">
+                            <i class="hot"></i>
+                            <img src="images/1.jpg  " alt="">
+                        </div>
+                        <div class="text fr">
+                            <h3>
+                                <a href="#">16个会让老妈完全爆炸的日常对话!
+                                    都进来看看吧！</a>
+                            </h3>
+                            <div class="info clearfix">
+                                <div class="fl read">
+                                    <i></i><span>123456</span>
+                                </div>
+                                <div class="fr hebi">
+                                    <i>剩余盒币：</i><span>12345<i>&nbsp;&nbsp;/&nbsp;&nbsp;23456</i></span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="clearfix">
+                        <div class="pic_box fl">
+                            <i class="hot"></i>
+                            <img src="images/1.jpg  " alt="">
+                        </div>
+                        <div class="text fr">
+                            <h3>
+                                <a href="#">16个会让老妈完全爆炸的日常对话!
+                                    都进来看看吧！</a>
+                            </h3>
+                            <div class="info clearfix">
+                                <div class="fl read">
+                                    <i></i><span>123456</span>
+                                </div>
+                                <div class="fr hebi">
+                                    <i>剩余盒币：</i><span>12345<i>&nbsp;&nbsp;/&nbsp;&nbsp;23456</i></span>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
 
-            </ul>
+            <p class="i_loading">
+                <i></i>努力加载中
+            </p>
+        </div>
+        <div class="i_zg clearfix">
+            <dl class="fl">
+                <dt>长期有奖征稿啦!</dt>
+                <dd>
+                    趣闻、趣事、八卦来者不拒！
+                </dd>
+                <dd>
+                    被采用投稿者将获得20盒币奖励呦！
+                </dd>
+            </dl>
+            <a href="#" class="fl">
+                <i>
+
+                </i>
+                <p>我要投稿 <b></b></p>
+            </a>
         </div>
     </section>
-
 </section>
+<footer>
+    <dl>
+        <dt>玩手机游戏　还上4399</dt>
+        <dd>本活动最终解释权归4399官方所有</dd>
+        <dd>@2004-2015四三九九网络股份有限公司</dd>
+    </dl>
+</footer>
 </body>
 </html>
+<script src="js/touchScroll.js">s</script>
+<script>
+    (function(){
+        var oList = document.getElementById('J_listBox');
+        var iScroll = new MScroll(oList,'y',false,false,false);
+    })();
+</script>
