--- a/游戏圈达人榜/index.html
+++ b/游戏圈达人榜/index.html
@@ -36,6 +36,7 @@
             }
             b()
         }(window);
+        var globContextPath = "";
     </script>
 </head>
 <body>
@@ -75,7 +76,7 @@
             </h2>
             <div class="m_list">
                 <ul>
-                    <li class="m_user l_first clearfix">
+                    <li class="m_user l_first">
                         <div class="rank fl">
                             <strong>1</strong>
                         </div>
@@ -85,7 +86,7 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
+                                <p class="name">蓝蓝 Izri <i></i><a class="fr active" href="#">盒饭认证</a></p>
                                 <p class="tipc">发布****话题</p>
                                 <p class="num">达人值：<span>400</span></p>
                                 <a href="#" class="watch">关注他</a>
@@ -93,7 +94,7 @@
 
                         </div>
                     </li>
-                    <li class="m_user l_second clearfix">
+                    <li class="m_user l_second">
                         <div class="rank fl">
                             <strong>2</strong>
                         </div>
@@ -111,7 +112,7 @@
 
                         </div>
                     </li>
-                    <li class="m_user l_third clearfix">
+                    <li class="m_user l_third">
                         <div class="rank fl">
                             <strong>3</strong>
                         </div>
@@ -128,7 +129,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="m_user other clearfix">
+                    <li class="m_user other">
                         <div class="rank fl">
                             <strong>4</strong>
                         </div>
@@ -138,14 +139,14 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
+                                <p class="name">蓝蓝 Izri <i></i><a class="fr active" href="#">盒饭认证</a></p>
                                 <p class="tipc">发布****话题</p>
                                 <p class="num">达人值：<span>400</span></p>
                                 <a href="#" class="watch">关注他</a>
                             </div>
                         </div>
                     </li>
-                    <li class="m_user other clearfix">
+                    <li class="m_user other">
                         <div class="rank fl">
                             <strong>5</strong>
                         </div>
@@ -162,7 +163,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="m_user other clearfix">
+                    <li class="m_user other">
                         <div class="rank fl">
                             <strong>6</strong>
                         </div>
@@ -179,7 +180,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="m_user other clearfix">
+                    <li class="m_user other">
                         <div class="rank fl">
                             <strong>7</strong>
                         </div>
@@ -196,7 +197,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="m_user other clearfix">
+                    <li class="m_user other">
                         <div class="rank fl">
                             <strong>8</strong>
                         </div>
@@ -213,7 +214,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="m_user other clearfix">
+                    <li class="m_user other">
                         <div class="rank fl">
                             <strong>9</strong>
                         </div>
@@ -230,7 +231,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="m_user other clearfix">
+                    <li class="m_user other">
                         <div class="rank fl">
                             <strong>10</strong>
                         </div>
