--- a/游戏圈达人榜/rule.html
+++ b/游戏圈达人榜/rule.html
@@ -66,7 +66,7 @@
                         <th>上线次数</th>
                     </tr>
                     <tr>
-                        <td style="padding-top:0.15rem;">1</td>
+                        <td>1</td>
                         <td>推荐上首页</td>
                         <td>10</td>
                         <td>1次/天</td>
@@ -115,16 +115,9 @@
                     </tr>
                 </table>
             </div>
+            <a href="#" class="r_btnbox">到游戏圈赚达人积分</a>
         </div>
-        <div class="r_btnbox">
-            <a href="#"></a>
-        </div>
-
     </section>
 </section>
-<footer>
-    <p>本活动最终解释权归4399所有</p>
-    <p>©2004-2016四三九九网络股份有限公司</p>
-</footer>
 </body>
 </html>
