--- a/游戏圈达人榜/index.html
+++ b/游戏圈达人榜/index.html
@@ -40,6 +40,7 @@
     </script>
 </head>
 <body>
+
 <section class="content">
     <section class="k_skin_box k_skin_1">
         <div class="k_skin"></div>
@@ -61,9 +62,9 @@
                         <img src="images/avatar.png" alt="">
                     </div>
                     <div class="view fr">
-                        <p class="name">蓝蓝 Izri <i></i><a href="#" class="fr">盒饭认证</a></p>
-                        <p class="tipc">发布****话题</p>
-                        <p class="num">达人值：<span>400</span></p>
+                        <div class="name"><span>蓝蓝 Izri</span> <i></i><a href="#" class="fr">盒饭认证</a></div>
+                        <div class="tipc">发布****话题</div>
+                        <div class="num">达人值：<span>400</span></div>
                     </div>
                 </div>
             </div>
@@ -86,9 +87,9 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr active" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr active" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
 
@@ -104,10 +105,10 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
-                                <a href="#" class="watch">关注他</a>
+                                <div class="name"><span>蓝蓝 Izri</span> <i></i><a class="fr" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
+                                <div href="#" class="watch">关注他</div>
                             </div>
 
                         </div>
@@ -122,9 +123,9 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
                         </div>
@@ -139,9 +140,9 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr active" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr active" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
                         </div>
@@ -156,9 +157,9 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr active" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
                         </div>
@@ -173,9 +174,9 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr active" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
                         </div>
@@ -190,9 +191,9 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr active" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
                         </div>
@@ -207,9 +208,9 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr active" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
                         </div>
@@ -224,9 +225,9 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
                         </div>
@@ -241,9 +242,9 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
                         </div>
@@ -259,21 +260,27 @@
             <h3><i></i>优质圈子推荐</h3>
             <ul class="clearfix">
                 <li>
-                    <a href="#"><img src="images/bg_ecy.png" alt=""></a>
-                    <p><a href="#">二次元</a></p>
+                    <a href="#">
+                        <img src="images/bg_ecy.png" alt="">
+                        <p>二次元</p>
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/bg_ecy.png" alt=""></a>
-                    <p><a href="#">二次元</a></p>
+                    <a href="#">
+                        <img src="images/bg_ecy.png" alt="">
+                        <p>二次元</p>
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/bg_ecy.png" alt=""></a>
-                    <p><a href="#">二次元</a></p>
+                    <a href="#">
+                        <img src="images/bg_ecy.png" alt="">
+                        <p>二次元</p>
+                    </a>
                 </li>
             </ul>
         </div>
         <div class="m_backtop">
-            <a id="J_backTop"></a>
+            <a id="j-backTop"></a>
         </div>
     </section>
 </section>
@@ -283,13 +290,37 @@
 </footer>
 </body>
 </html>
+<script type="text/javascript" src="js/zepto.min.js"></script>
+<script type="text/javascript" src="js/ueApp.scrollLoad.js"></script>
+<script>
+    $(function(){
+        ueApp.scrollLoad({
+            target : ".j-loadlist",
+            item : ".j-loadlist ul",
+            url : "",
+            // field : "page=",
+            // initIndex : 0,
+            // per : 1,
+            data : "data",
+            // type : "jsonp",
+            // jsonp : "_callback_",
+            temp : "'<li>名字'+data[i].name+'；年龄：'+data[i].age+'</li>'"
+        });
+    });
+</script>
 <script>
     //返回顶部
     (function(){
-        var oBackTop = document.getElementById('J_backTop');
+        var oBackTop = document.getElementById('j-backTop');
         var iTimer = null;
         var b = 0;
         window.onscroll = function(){
+            var iScroll = document.documentElement.scrollTop || document.body.scrollTop;
+            if(iScroll >= 400){
+                oBackTop.style.display = 'block';
+            }else{
+                oBackTop.style.display = 'none';
+            }
             if( b != 1){//当滚动条触发时停止定时器
                 clearInterval(iTimer);
             }
