--- a/天天好阅读活动改版/strategy.html
+++ b/天天好阅读活动改版/strategy.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <!--ios-->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-touch-fullscreen" content="yes"/>
+    <!--qq-->
+
+    <meta name="x5-fullscreen" content="true">
+    <meta name="x5-page-mode" content="app">
     <script>
         ! function(a) {
             function b() {
