--- a/游戏圈达人榜/noenroll.html
+++ b/游戏圈达人榜/noenroll.html
@@ -60,9 +60,9 @@
                         <img src="images/avatar.png" alt="">
                     </div>
                     <div class="view fr">
-                        <p class="name">蓝蓝 Izri <i></i><a href="#" class="fr">盒饭认证</a></p>
-                        <p class="tipc">发布****话题</p>
-                        <p class="num">达人值：<span>400</span></p>
+                        <div class="name"><span>蓝蓝 Izri </span><i></i><a href="#" class="fr">盒饭认证</a></div>
+                        <div class="tipc">发布****话题</div>
+                        <div class="num">达人值：<span>400</span></div>
                     </div>
                 </div>
             </div>
@@ -75,7 +75,7 @@
             </h2>
             <div class="m_list">
                 <ul>
-                    <li class="m_user l_first clearfix">
+                    <li class="m_user l_first">
                         <div class="rank fl">
                             <strong>1</strong>
                         </div>
@@ -85,15 +85,15 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr active" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
 
                         </div>
                     </li>
-                    <li class="m_user l_second clearfix">
+                    <li class="m_user l_second">
                         <div class="rank fl">
                             <strong>2</strong>
                         </div>
@@ -103,15 +103,15 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
-                                <a href="#" class="watch">关注他</a>
+                                <div class="name"><span>蓝蓝 Izri</span> <i></i><a class="fr" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
+                                <div href="#" class="watch">关注他</div>
                             </div>
 
                         </div>
                     </li>
-                    <li class="m_user l_third clearfix">
+                    <li class="m_user l_third">
                         <div class="rank fl">
                             <strong>3</strong>
                         </div>
@@ -121,14 +121,14 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
                         </div>
                     </li>
-                    <li class="m_user other clearfix">
+                    <li class="m_user other">
                         <div class="rank fl">
                             <strong>4</strong>
                         </div>
@@ -138,14 +138,14 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr active" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
                         </div>
                     </li>
-                    <li class="m_user other clearfix">
+                    <li class="m_user other">
                         <div class="rank fl">
                             <strong>5</strong>
                         </div>
@@ -155,14 +155,14 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr active" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
                         </div>
                     </li>
-                    <li class="m_user other clearfix">
+                    <li class="m_user other">
                         <div class="rank fl">
                             <strong>6</strong>
                         </div>
@@ -172,14 +172,14 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr active" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
                         </div>
                     </li>
-                    <li class="m_user other clearfix">
+                    <li class="m_user other">
                         <div class="rank fl">
                             <strong>7</strong>
                         </div>
@@ -189,14 +189,14 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr active" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
                         </div>
                     </li>
-                    <li class="m_user other clearfix">
+                    <li class="m_user other">
                         <div class="rank fl">
                             <strong>8</strong>
                         </div>
@@ -206,14 +206,14 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr active" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
                         </div>
                     </li>
-                    <li class="m_user other clearfix">
+                    <li class="m_user other">
                         <div class="rank fl">
                             <strong>9</strong>
                         </div>
@@ -223,14 +223,14 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
                         </div>
                     </li>
-                    <li class="m_user other clearfix">
+                    <li class="m_user other">
                         <div class="rank fl">
                             <strong>10</strong>
                         </div>
@@ -240,9 +240,9 @@
                                 <img src="images/avatar.png" alt="">
                             </div>
                             <div class="view fr">
-                                <p class="name">蓝蓝 Izri <i></i><a class="fr" href="#">盒饭认证</a></p>
-                                <p class="tipc">发布****话题</p>
-                                <p class="num">达人值：<span>400</span></p>
+                                <div class="name"><span>蓝蓝 Izri </span><i></i><a class="fr" href="#">盒饭认证</a></div>
+                                <div class="tipc">发布****话题</div>
+                                <div class="num">达人值：<span>400</span></div>
                                 <a href="#" class="watch">关注他</a>
                             </div>
                         </div>
@@ -258,21 +258,27 @@
             <h3><i></i>优质圈子推荐</h3>
             <ul class="clearfix">
                 <li>
-                    <a href="#"><img src="images/bg_ecy.png" alt=""></a>
-                    <p><a href="#">二次元</a></p>
+                    <a href="#">
+                        <img src="images/bg_ecy.png" alt="">
+                        <p>二次元</p>
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/bg_ecy.png" alt=""></a>
-                    <p><a href="#">二次元</a></p>
+                    <a href="#">
+                        <img src="images/bg_ecy.png" alt="">
+                        <p>二次元</p>
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/bg_ecy.png" alt=""></a>
-                    <p><a href="#">二次元</a></p>
+                    <a href="#">
+                        <img src="images/bg_ecy.png" alt="">
+                        <p>二次元</p>
+                    </a>
                 </li>
             </ul>
         </div>
         <div class="m_backtop">
-            <a id="J_backTop"></a>
+            <a id="j-backTop"></a>
         </div>
     </section>
 </section>
@@ -282,6 +288,24 @@
 </footer>
 </body>
 </html>
+<script type="text/javascript" src="js/zepto.min.js"></script>
+<script type="text/javascript" src="js/ueApp.scrollLoad.js"></script>
+<script>
+    $(function(){
+        ueApp.scrollLoad({
+            target : ".j-loadlist",
+            item : ".j-loadlist ul",
+            url : "",
+            // field : "page=",
+            // initIndex : 0,
+            // per : 1,
+            data : "data",
+            // type : "jsonp",
+            // jsonp : "_callback_",
+            temp : "'<li>名字'+data[i].name+'；年龄：'+data[i].age+'</li>'"
+        });
+    });
+</script>
 <script>
     //返回顶部
     (function(){
@@ -289,6 +313,12 @@
         var iTimer = null;
         var b = 0;
         window.onscroll = function(){
+            var iScroll = document.documentElement.scrollTop || document.body.scrollTop;
+            if(iScroll >= 400){
+                oBackTop.style.display = 'block';
+            }else{
+                oBackTop.style.display = 'none';
+            }
             if( b != 1){//当滚动条触发时停止定时器
                 clearInterval(iTimer);
             }
