--- a/游戏圈达人榜/share.html
+++ b/游戏圈达人榜/share.html
@@ -93,16 +93,22 @@
             <h3><i></i>优质圈子推荐</h3>
             <ul class="clearfix">
                 <li>
-                    <a href="#"><img src="images/bg_ecy_h.png" alt=""></a>
-                    <p><a href="#">二次元</a></p>
+                    <a href="#">
+                        <img src="images/bg_ecy_h.png" alt="">
+                        <p>二次元</p>
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/bg_ecy_h.png" alt=""></a>
-                    <p><a href="#">二次元</a></p>
+                    <a href="#">
+                        <img src="images/bg_ecy_h.png" alt="">
+                        <p>二次元</p>
+                    </a>
                 </li>
                 <li>
-                    <a href="#"><img src="images/bg_ecy_h.png" alt=""></a>
-                    <p><a href="#">二次元</a></p>
+                    <a href="#">
+                        <img src="images/bg_ecy_h.png" alt="">
+                        <p>二次元</p>
+                    </a>
                 </li>
             </ul>
         </div>
